--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "nodemon": "^1.18.6"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
+    "sinon": "^7.1.1"
   }
 }
