--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "express": "^4.16.4",
     "mocha": "^5.2.0",
-    "sinon": "^7.1.1"
+    "sinon": "^7.1.1",
+    "supertest": "^3.3.0"
   }
 }
