set mocha as test runner

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha ./tests --recursive",
     "server": "nodemon ./server/app.js",
     "client": "cd ./client && npm start",
     "dev": "start npm run server && start npm run client"
