--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "mocha ./tests --recursive",
     "server": "nodemon ./server/app.js",
     "client": "cd ./client && npm start",
-    "dev": "start npm run server && start npm run client"
+    "dev": "start npm run server && start npm run client",
+    "prod": "cd ./client && npm run build && node ../server/app.js"
   },
   "author": "Andrey Barkov",
   "license": "ISC",
